<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PrivecyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundtwo"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_privecy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="Privacy &amp; Policy"
            app:titleTextColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_privecy">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".5"
                android:background="@drawable/background_fade">

            </FrameLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/versionDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:elevation="5dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/one_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/logo1"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/app_name"
                            android:elevation="10dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/pipsicon" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/logo1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"
                                android:textColor="@color/black"
                                android:textSize="28sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pips_lover_slogan"
                                android:textColor="@color/black"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/one_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/one_one"
                        android:layout_marginTop="-20dp">

                        <ImageView
                            android:id="@+id/logo3"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:src="@drawable/copyright_logo"
                            android:contentDescription="@string/copyright_icon" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/logo3"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/copyright"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pips_lover_2021"
                                android:textColor="@color/black"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/one_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/one_three"
                        android:layout_marginTop="-10dp">

                        <ImageView
                            android:id="@+id/logo2"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:src="@drawable/copyright_logo"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/logo2"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version_no"
                                android:textColor="@color/black"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </RelativeLayout>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/powered_by_section_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/versionDetails"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:elevation="5dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/two_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:layout_marginTop="20dp"
                            android:id="@+id/banglabs_iocn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitCenter"
                            android:src="@drawable/banglabs_base_icon" />

                        <LinearLayout
                            android:id="@+id/base_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/banglabs_iocn"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/powered_by"
                                android:textColor="@color/black"
                                android:textSize="28sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:text="@string/banglabs_co"
                                android:textColor="@color/blue"
                                android:textSize="15sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/two_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/two_one"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="-30dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contact"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:text="@string/fort_lauderdale_florida_usa"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/two_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/two_three"
                        android:layout_marginStart="100dp"
                        android:layout_marginBottom="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:text="@string/banglabs2020_gmail_com"
                                android:textColor="@color/black"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:text="@string/facebook_com_banglabsbd"
                                android:textColor="@color/black"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </RelativeLayout>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>