<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundtwo"
        android:fitsSystemWindows="true"
        tools:ignore="UselessParent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="Contact"
            app:titleTextColor="@color/white" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_contact">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".5"
                android:background="@drawable/background_fade">

            </FrameLayout>




            <ScrollView
                android:id="@+id/scroll"
                android:background="@drawable/edit_style"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp">

                <EditText
                    android:id="@+id/user_revew_box_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/this_app_is"
                    android:textSize="22sp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="textMultiLine"
                    tools:ignore="Autofill" />

            </ScrollView>

            <LinearLayout
                android:layout_below="@+id/scroll"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:weightSum="2"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/clear_btn_id"
                    style="@style/Widget.AppCompat.Light.ActionButton"
                    android:backgroundTint="@color/red_dark2"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/clear"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:background="@drawable/rounded_border_blank"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20"
                    />

                <Button
                    android:id="@+id/send_btn_id"
                    style="@style/Widget.AppCompat.Light.ActionButton"
                    android:background="@drawable/rounded_border_blank"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/send"
                    android:backgroundTint="@color/happy"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20"/>
            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>